      v3 directory authority.
    - If an authority doesn't have a qualified hostname, just put its address
      in the vote.  This fixes the problem where we referred to "moria on
      moria:9031."
    - Distinguish between detached signatures for the wrong period, and
      detached signatures for a divergent vote.
    - Fix a small memory leak when computing a consensus.

  o Minor bugfixes (v3 directory protocol):
    - Delete unverified-consensus when the real consensus is set.
    - Consider retrying a consensus networkstatus fetch immediately after one
      fails: don't wait 60 seconds to notice.
    - When fetching a consensus as a cache, wait until a newer consensus
      exists before trying to replace the current one.

  o Minor bugfixes (controller):
    - Don't reset trusted dir server list when we set a configuration
      option. Patch from Robert Hogan.
    - Respond to INT and TERM SIGNAL commands before we execute the
      signal, in case the signal shuts us down. We had a patch in
      0.1.2.1-alpha that tried to do this by queueing the response on
      the connection's buffer before shutting down, but that really
      isn't the same thing. Bug located by Matt Edman.

  o Minor bugfixes (memory leaks):
    - Stop leaking memory on failing case of base32_decode.  Bugfix on
      0.2.0.7-alpha.

  o Minor bugfixes (misc):
    - Make base32_decode() accept upper-case letters.  Bugfix on
      0.2.0.7-alpha.
    - Don't try to download extrainfo documents when we're trying to
      fetch enough directory info to build a circuit: having enough
      info should get priority.

  o Minor bugfixes (performance):
    - Base64 decoding was actually showing up on our profile when parsing
      the initial descriptor file; switch to an in-process all-at-once
      implementation that's about 3.5x times faster than calling out to
      OpenSSL.

  o Code simplifications and refactoring: